# CyrillicSegNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app_ui/: kyrgyz_recognition_gui.py  word_recogination.py
data/: README.md
docs/: ModelTraining.md
notebooks/: 1_data_loading_and_preprocessing.ipynb  2_dataset_combination_and_splitting.ipynb  3_cnn_model_for_combined_classification.ipynb  KyrgyzOCR_Word_Recognition.ipynb  README.md  kyrgyz_cyrillic_classification_training.ipynb  kyrgyz_segm.py  recog_words.ipynb
results/: training_results.npy
results/models/: label_encoder.pkl
src/: cyrilic_training.py  data_preprocessing.py  letter_recog.py  model.py  train_model.py
